--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
     "daisyui": "^5.0.43",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
